<resources>
    <string name="app_name">App\nGCMCF</string>

    <string name="entrar">ENTRAR</string>
    <string name="text_TelaLogin">© 2023</string>
    <string name="btn_principal">BOGCM</string>
    <string name="btn_principalPesquisa">PESQUISAR</string>
    <string name="btn_PrincipalDinamica">DINÂMICA</string>
    <string name="btn_PrincipalExtra">EXTRA</string>
    <string name="btn_PrincipalID_Funcional">FUNCIONAL\nDIGITAL</string>
    <string name="btn_PrincipalDeslogar">SAIR</string>


    <string name="text_BOGCMComOcorrencia">Comunicado da ocorrência</string>
    <string name="text_TelaDinamica">Dinâmica</string>

    <string name="text_BOGCMLocalOcorrencia">Local da ocorrência</string>
    <string name="text_BOGCMObservacao">Dinâmica da ocorrência/Observação</string>
    <string name="text_BOGCMencaminhamentoOrgao">Encaminhamento para outros orgãos</string>

    <string name="text_BOGCMQualificaçãoQ1">Qualificação das partes envolvidas - Q1</string>
    <string name="text_BOGCMQualificaçãoQ2">Qualificação das partes envolvidas - Q2</string>
    <string name="text_BOGCMCondutorOcorrencia">GCMs condutores da ocorrência</string>
    <string name="text_BOGCMEquipedeApoio">Equipe de apoio</string>

    <string name="text_BOGCMfinalizacaoOcorrencia">Finalização da ocorrência</string>


    <string name="btn_avancaComOcorrencia">ENVIAR</string>
    <string name="btn_enviar_dinamica">ENVIAR</string>
    <string name="btn_limpar_assinatura">LIMPAR</string>
    <string name="btn_salvar_assinatura">SALVAR</string>
    <string name="btn_recolherAssinatturaQ1">ASSINATURA Q1</string>
    <string name="btn_recolherAssinatturaQ2">ASSINATURA Q2</string>


    <string-array name="itens_spinner">
        <item>COMO FOI SOLICITADO?</item>
        <item>ABORDAGEM</item>
        <item>CCO</item>
        <item>PRESENCIAL</item>
        <item>SUPERVISÃO</item>
    </string-array>

    <string-array name="itens_spinner_tipo_ocorrencia">
        <item>TIPO OCORRENCIA?</item>
        <item>T-ACIDENTE DE TRÂNSITO (COM VÍTIMA)</item>
        <item>T-ACIDENTE DE TRÂNSITO (SEM VÍTIMA)</item>
        <item>T-ANIMAL SOLTO NA PISTA</item>
        <item>T-DESVIO DE TRÂNSITO (APOIO A ENEL)</item>
        <item>T-DESVIO DE TRÂNSITO (APOIO A PROLAGOS)</item>
        <item>T-DESVIO DE TRÂNSITO (EVENTO)</item>
        <item>T-DESVIO DE TRÂNSITO (VEÍCULO QUEBRADO NA VIA)</item>
        <item>T-PRESERVAÇÃO DE VAGA DE VEÍCULOS</item>
        <item>T-QUEDA (ÁRVORE NA VIA)</item>
        <item>T-QUEDA (FIO DE ALTA TENSÃO NA VIA)</item>
        <item>T-VEÍCULO ABANDONADO NA VIA</item>
        <item>T-VEÍCULO ESTACIONADO IRREGULARMENTE(ESPECIFICAR NA OBSERVAÇÃO)</item>
        <item>R-COBRANÇA IRREGULAR DE ESTACIONAMENTO (FLANELAGEM)</item>
        <item>R-DESACATO AO SERVIDOR PÚBLICO</item>
        <item>R-FURTO</item>
        <item>R-IMPORTUNAÇÃO</item>
        <item>R-MEDIAÇÃO DE CONFLITO</item>
        <item>R-RECUPERAÇÃO DE VEÍCULO ROUBADO</item>
        <item>R-RELACIONADO À POPULAÇÃO DE RUA(ESPECIFICAR NA OBSERVAÇÃO)</item>
        <item>R-SOM ALTO (ESPECIFICAR NA OBSERVAÇÃO)</item>
        <item>M-CONSTRUÇÃO EM ÁREA DE PRESERVAÇÃO</item>
        <item>M-CORTE ILEGAL DE ÁRVORE</item>
        <item>M-CRIME AMBIENTAL (ESPECIFICAR NA OSERVAÇÃO)</item>
        <item>M-MAUS TRATOS A ANIMAIS</item>
        <item>M-RESGATE DE ANIMAIS</item>
        <item>P-ALTINHA</item>
        <item>P-FRESCOBOL</item>
        <item>P-FUTEBOL</item>
        <item>D-AUXILIO AO CIDADÃO (ESPECIFICAR NA OBSERVAÇÃO)</item>
        <item>D-AUXÍLIO NA LOCALIZAÇÃO DE FAMILIAR</item>
        <item>D-CRIANÇA PERDIDA</item>
        <item>D-OPERAÇÃO EM CONJUNTO COM A PMERJ</item>
        <item>D-OPERAÇÃO EM CONJUNTO COM O DETRAN</item>
        <item>D-OPERAÇÃO EM CONJUNTO COM OUTRA SECRETARIA(ESPEC. OBSERVAÇÃO)</item>
        <item>D-SUPORTE AO CIDADÃO EM SURTO</item>
        <item>V-VIOLÊNCIA DOMÉSTICA (LEI MARIA DA PENHA)</item>
        <item>OUTROS (ESPECIFICAR NA OBSERVAÇÃO)</item>

    </string-array>


    <string-array name="itens_spinnerBairro">
        <item>BAIRRO?</item>
        <item>BRAGA</item>
        <item>CENTRO</item>
        <item>SÃO CRISTÓVÃO</item>
        <item>OUTRO (DESCREVER NA OBSERVAÇÃO)</item>
    </string-array>


    <string-array name="itens_spinner_qualificacao_q1">
        <item>SELECIONE UMA DAS OPÇÕES?</item>
        <item>SOLICITANTE</item>
        <item>SUSPEITO</item>
        <item>AUTOR</item>
        <item>TESTEMUNHA</item>
        <item>OUTRO (DESCREVER NA OBSERVAÇÃO)</item>
    </string-array>

    <string-array name="itens_spinner_qualificacao_q2">
        <item>SELECIONE UMA DAS OPÇÕES?</item>
        <item>SOLICITANTE</item>
        <item>SUSPEITO</item>
        <item>AUTOR</item>
        <item>TESTEMUNHA</item>
        <item>OUTRO (DESCREVER NA OBSERVAÇÃO)</item>
    </string-array>


    <string-array name="itens_spinner_grupamento">
        <item>GRUPAMENTO?</item>
        <item>TRÂNSITO</item>
        <item>RONDA ESCOLAR</item>
        <item>ROMU</item>
        <item>FISCALIZAÇÃO DE TRANSPORTE</item>
        <item>PERÓ</item>
        <item>GOP</item>
        <item>PATRULHA MARIA DA PENHA</item>
        <item>2º DISTRITO</item>
        <item>MARÍTIMA</item>
        <item>OUTRO (DESCREVER NA OBSERVAÇÃO)</item>
    </string-array>


    <string-array name="itens_spinner_tipo_Dinamica">
        <item>TIPO DINÂMINCA</item>
        <item>PATRULHAMENTO PREVENTIVO</item>
        <item>ORDEM DE SERVIÇO</item>
        <item>ACIDENTE DE TRÂNSITO (COM VÍTIMA)</item>
        <item>ACIDENTE DE TRÂNSITO (SEM VÍTIMA)</item>
        <item>ANIMAL SOLTO NA PISTA</item>
        <item>DESVIO DE TRÂNSITO (APOIO A ENEL)</item>
        <item>DESVIO DE TRÂNSITO (APOIO A PROLAGOS)</item>
        <item>DESVIO DE TRÂNSITO (EVENTO)</item>
        <item>DESVIO DE TRÂNSITO (VEÍCULO QUEBRADO NA VIA)</item>
        <item>PRESERVAÇÃO DE VAGA DE VEÍCULOS</item>
        <item>QUEDA (ÁRVORE NA VIA)</item>
        <item>QUEDA (FIO DE ALTA TENSÃO NA VIA)</item>
        <item>VEÍCULO ABANDONADO NA VIA</item>
        <item>VEÍCULO ESTACIONADO IRREGULARMENTE(ESPECIFICAR NO RELATO)</item>
        <item>COBRANÇA IRREGULAR DE ESTACIONAMENTO (FLANELAGEM)</item>
        <item>DESACATO AO SERVIDOR PÚBLICO</item>
        <item>FURTO</item>
        <item>IMPORTUNAÇÃO</item>
        <item>MEDIAÇÃO DE CONFLITO</item>
        <item>RECUPERAÇÃO DE VEÍCULO ROUBADO</item>
        <item>RELACIONADO À POPULAÇÃO DE RUA(ESPECIFICAR NO RELATO)</item>
        <item>SOM ALTO (ESPECIFICAR NO RELATO)</item>
        <item>CONSTRUÇÃO EM ÁREA DE PRESERVAÇÃO</item>
        <item>CORTE ILEGAL DE ÁRVORE</item>
        <item>CRIME AMBIENTAL (ESPECIFICAR NA OSERVAÇÃO)</item>
        <item>MAUS TRATOS A ANIMAIS</item>
        <item>RESGATE DE ANIMAIS</item>
        <item>ALTINHA</item>
        <item>FRESCOBOL</item>
        <item>FUTEBOL</item>
        <item>AUXILIO AO CIDADÃO (ESPECIFICAR NO RELATO)</item>
        <item>AUXÍLIO NA LOCALIZAÇÃO DE FAMILIAR</item>
        <item>CRIANÇA PERDIDA</item>
        <item>OPERAÇÃO EM CONJUNTO COM A PMERJ</item>
        <item>OPERAÇÃO EM CONJUNTO COM O DETRAN</item>
        <item>OPERAÇÃO EM CONJUNTO COM OUTRA SECRETARIA(ESPEC. NO RELATO)</item>
        <item>SUPORTE AO CIDADÃO EM SURTO</item>
        <item>VIOLÊNCIA DOMÉSTICA (LEI MARIA DA PENHA)</item>
        <item>OUTROS (ESPECIFICAR NO RELATO)</item>

    </string-array>

    <string-array name="itens_spinner_encaminhamento_orgao">
        <item>SELECIONE UMA DAS OPÇÕES?</item>
        <item>DELEGACIA</item>
        <item>IML</item>
        <item>UPA</item>
        <item>OUTRO (DESCREVER NA OBSERVAÇÃO)</item>
    </string-array>


</resources>